syntax = "proto3";

package Order;

message OrderMessage {
    int32 user_id = 1;
    string user_email = 2;
    string status = 3;
    double total_amount = 4;
    string created_at = 5;
    string updated_at = 6;
    string items = 7;
}
