syntax = "proto3";


message NotificationMessage {
    int32 user_id = 1;
    string email = 2;
    string message = 3;
    string subject = 4;
    string notification_type = 5;
}
